add google tag manager

--- a/assets/font.css
+++ b/assets/font.css
@@ -30,3 +30,7 @@ body {
   @apply md:overflow-overlay;
   font-family: 'Inter', Helvetica, Arial, sans-serif;
 }
+
+.font-proto-mono {
+  font-family: 'Proto Mono', monospace;
+}
